// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Full Coverage for validate/checkbox Form Validation: Invalid type 1`] = `
Object {
  "errors": Array [
    Object {
      "type": 3,
    },
  ],
  "mapTo": "mymapping",
}
`;

exports[`Full Coverage for validate/checkbox Form Validation: Required and ok 1`] = `true`;

exports[`Full Coverage for validate/checkbox Form Validation: Required but false 1`] = `
Object {
  "errors": Array [
    Object {
      "type": 4,
    },
  ],
  "mapTo": "MapA",
}
`;
